--- a/subscriber_management/templates/subscriber_list.html
+++ b/subscriber_management/templates/subscriber_list.html
@@ -1,101 +1,149 @@
 {% extends 'master.html' %}
 {% load i18n %}
+{% load humanize %}
+
+
+{% block title %}
+	{{list_item.title}}
+{% endblock %}
 
 
 {% block content %}
 
+	<br />
+
   <div class='container'>
 
-    {% include 'parts/list_header.html' %}
-    <ul class="nav nav-tabs">
-      <li role="presentation" class="active"><a href="{% url 'subscriber-management-list-subscribers' list.uuid %}">{% trans 'Subscribers' %}</a></li>
-      <li role="presentation"><a href="{% url 'subscriber-management-list-newsletter-homepage' list.uuid %}">{% trans 'Newsletter homepage' %}</a></li>
-      <li role="presentation"><a href="{% url 'subscriber-management-list-sign-up-form' list.uuid %}">{% trans 'Signup form' %}</a></li>
-      <li role="presentation"><a href="{% url 'subscriber-management-list-settings' list.uuid %}">{% trans 'Settings' %}</a></li>
-    </ul>
+    <div class='row'>
+      <div class='col-lg-10 col-lg-offset-1 col-sm-12'>
+        <h3>
+					<a href='{% url "subscriber-management-list" %}'>
+          {% trans "Subscriber Lists" %}</a>
+					&rsaquo;
+					{{list_item.title}}
+        </h3>
+      </div>
+    </div>
+
+    <div class='row'>
+      <div class='col-lg-10 col-sm-12 col-lg-offset-1'>
+				{% include 'parts/list_header.html' %}
+				<ul class="nav nav-tabs">
+					<li role="presentation" class='active'>
+						<a href="{% url 'subscriber-management-list-subscribers' list_item.uuid %}">
+							{% trans 'Subscribers' %}
+						</a>
+					</li>
+					<li role="presentation">
+						<a href="{% url 'subscriber-management-list-newsletter-homepage' list_item.uuid %}">
+							{% trans 'Newsletter homepage' %}
+						</a>
+					</li>
+					<li role="presentation">
+						<a href="{% url 'subscriber-management-list-sign-up-form' list_item.uuid %}">
+							{% trans 'Signup form' %}
+						</a>
+					</li>
+					<li role="presentation">
+						<a href="{% url 'subscriber-management-list-settings' list_item.uuid %}">
+							{% trans 'Settings' %}
+						</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+
     <br>
-    {% if not object_list %}
-      <p>{% trans 'No subscribers' %}</p>
-    {% else %}
-      <form method="POST" action="{% url 'subscriber-management-list-subscribers-bulk' list.uuid %}">
-        <table class="table">
-          <thead>
-            <tr>
-              <th><input type="checkbox" id="select_all"/></th>
-              <th>{% trans 'Email' %}</th>
-              <th>{% trans 'Name' %}</th>
-              <th>{% trans 'Timezone' %}</th>
-              <th>{% trans 'Country code' %}</th>
-              <th>{% trans 'Date join' %}</th>
-              <th>{% trans 'Action' %}</th>
-            <tr>
-          </thead>
-          <tbody>
-            {% for item in  object_list %}
-              <tr>
-                <td><input type="checkbox" class="item-checkbox" name="bulk_item" value="{{item.uuid}}"/></td>
-                <td>{{ item.email }}</td>
-                <td>{{ item.full_name }}</td>
-                <td>{{ item.human_tz }}</td>
-                <td>{{ item.country }}</td>
-                <td>{{ item.created }}</td>
-                <td>
-                  <a
-                    href="#"
-                    data-delete-url="{% url 'subscriber-management-subscriber-delete' list.uuid item.uuid %}"
-                    data-email="{{item.email}}"
-                    class="btn btn-danger btn-xs right"
-                    data-toggle="modal"
-                    data-target="#subscriber-delete-confirmation" class='text-danger'>
-                    {% trans 'Delete' %}
-                  </a>
-                </td>
-              </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-        <button class="btn btn-danger" data-toggle="modal"  name="bulk_action" data-target="#subscriber-delete-bulk-confirmation" disabled>{% trans 'Bulk delete' %}</button>
-      <form>
-      <br>
-      <br>
 
-      {% if object_list.has_other_pages %}
-        <nav aria-label="Page navigation">
-          <ul class="pagination">
-            {% if object_list.has_previous %}
-            <li>
-              <a href="{% url 'subscriber-management-list-subscribers' list.uuid %}?page={{object_list.previous_page_number}}" aria-label="Previous">
-                <span aria-hidden="true">{% trans 'Prev' %}</span>
-              </a>
-            </li>
-            {% endif %}
-            {% if object_list.has_next %}
-            <li>
-              <a href="{% url 'subscriber-management-list-subscribers' list.uuid %}?page={{object_list.next_page_number}}" aria-label="Next">
-                <span aria-hidden="true">{% trans 'Next' %}</span>
-              </a>
-            </li>
-            {% endif %}
-            <li>
-                <span  aria-label="Next">
-                  <span aria-hidden="true">{{object_list.number}} / {{ object_list.paginator.num_pages }}</span>
-              </span>
+    <div class='row'>
+      <div class='col-lg-10 col-sm-12 col-lg-offset-1'>
+			{% if not subscribers %}
+				<p>{% trans 'No subscribers' %}</p>
+			{% else %}
+				<form method="post" action="{% url 'subscriber-management-list-subscribers-bulk' list_item.uuid %}">
+					<div class="table-responsive">
+						<table class="table table-hover">
+							<thead>
+								<tr>
+									<th><input type="checkbox" id="select_all"/></th>
+									<th>{% trans 'Email' %}</th>
+									<th>{% trans 'Timezone' %}</th>
+									<th>{% trans 'Country' %}</th>
+									<th>{% trans 'Date joined' %}</th>
+									<th>{% trans 'Action' %}</th>
+								<tr>
+							</thead>
+							<tbody>
+								{% for item in  subscribers %}
+									<tr>
+										<td><input type="checkbox" class="item-checkbox" name="bulk_item" value="{{item.uuid}}"/></td>
+										<td>{{ item.email }}</td>
+										<td>{{ item.human_tz }}</td>
+										<td>{{ item.country|default_if_none:"Internet" }}</td>
+										<td>{{ item.created }}</td>
+										<td>
+											<a
+												href="#"
+												data-delete-url="{% url 'subscriber-management-subscriber-delete' list_item.uuid item.uuid %}"
+												data-email="{{item.email}}"
+												class="btn btn-danger btn-xs right"
+												data-toggle="modal"
+												data-target="#subscriber-delete-confirmation" class='text-danger'>
+												{% trans 'Delete' %}
+											</a>
+										</td>
+									</tr>
+								{% endfor %}
+							</tbody>
+						</table>
+					</div>
+					<button class="btn btn-danger btn-xs" data-toggle="modal"  name="bulk_action" data-target="#subscriber-delete-bulk-confirmation" disabled>
+						{% trans 'Bulk delete' %}
+					</button>
+				<form>
 
-            </li>
-          </ul>
-        </nav>
-      {% endif %}
-    {% endif %}
+				{% if subscribers.has_other_pages %}
+					<nav aria-label="Page navigation" class='text-center'>
+						<ul class="list-inline">
+							{% if subscribers.has_previous %}
+							<li>
+								<a class='btn btn-sm btn-default' href="{% url 'subscriber-management-list-subscribers' list_item.uuid %}?page={{subscribers.previous_page_number}}" aria-label="Previous">
+									<span aria-hidden="true">&lsaquo; {% trans 'Prev' %}</span>
+								</a>
+							</li>
+							{% endif %}
+							<li>
+								<span>
+									<span>
+										{{subscribers.start_index}}&thinsp;&ndash;&thinsp;{{subscribers.end_index}}
+										<span class='text-muted'>of</span> {{ subscribers.paginator.count|intcomma }}
+									</span>
+								</span>
+							</li>
+							{% if subscribers.has_next %}
+							<li>
+								<a class='btn btn-sm btn-default' href="{% url 'subscriber-management-list-subscribers' list_item.uuid %}?page={{subscribers.next_page_number}}" aria-label="Next">
+									<span aria-hidden="true">{% trans 'Next' %} &rsaquo;</span>
+								</a>
+							</li>
+							{% endif %}
+						</ul>
+					</nav>
+				{% endif %}
+			{% endif %}
+		</div>
+	</div>
 
     <div id='subscriber-delete-bulk-confirmation' class="modal" tabindex="-1" role="dialog">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
-          <form method='post' action='{% url "subscriber-management-list-subscribers-bulk" list.uuid %}'>
+          <form method='post' action='{% url
+						"subscriber-management-list-subscribers-bulk" list_item.uuid %}'>
             {% csrf_token %}
             <input type="hidden" name="user_list" value=""/>
             <div class="modal-header">
               <button type="button" tabindex='-1' class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-              <h4 class="modal-title">Please confirm subscriber deletion from {{list.name}}</h4>
+              <h4 class="modal-title">Please confirm subscriber deletion from {{list_item.name}}</h4>
             </div>
             <div class="modal-body">
               <p>
@@ -114,8 +162,6 @@
       </div><!-- /.modal-dialog -->
     </div>
 
-  </div>
-
     <div id='subscriber-delete-confirmation' class="modal" tabindex="-1" role="dialog">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -123,11 +169,11 @@
             {% csrf_token %}
             <div class="modal-header">
               <button type="button" tabindex='-1' class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-              <h4 class="modal-title">Please confirm subscriber deletion from {{list.name}}</h4>
+              <h4 class="modal-title">Please confirm subscriber deletion from {{list_item.name}}</h4>
             </div>
             <div class="modal-body">
               <p>
-                <strong>Are you sure you can to delete <span id="user_email"></span> from {{list.name}}?</strong>
+                <strong>Are you sure you can to delete <span id="user_email"></span> from {{list_item.name}}?</strong>
               </p>
               <ul>
                 <li>All the information about this subscriber will be lost forever.</li>
@@ -141,11 +187,14 @@
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
     </div>
+
     {% include 'import.html' %}
+
 {% endblock %}
 
 
 {% block script %}
+
     <script>
       function bulkButton() {
         buildBulkDeleteList()
@@ -187,4 +236,5 @@
         $('#confirm_delete_subscriber_button').attr('href', $(this).data('delete-url'))
       })
     </script>
+
 {% endblock %}
