--- a/subscriber_management/templates/subscriber_list.html
+++ b/subscriber_management/templates/subscriber_list.html
@@ -20,7 +20,7 @@
 					<a href='{% url "subscriber-management-list" %}'>
           {% trans "Subscriber Lists" %}</a>
 					&rsaquo;
-					{{list_item.title}}
+					{{list_item.name}}
         </h3>
       </div>
     </div>
