Give some more personality to the UI.

--- a/templates/master.html
+++ b/templates/master.html
@@ -34,7 +34,11 @@
 				box-shadow: 0 1px 1px #b3b3b3;
 			}
 			main {
-				min-height: 65vh;
+				min-height: 80vh;
+			}
+			footer {
+				background: #FAFAFA;
+				margin-top: 7rem;
 			}
 			.btn, .btn-group-sm > .btn {
 				border-radius: 4px;
@@ -75,7 +79,7 @@
 
     </main>
 
-    <footer class='container'>
+		<footer>
       {% include "parts/footer.html" %}
     </footer>
 
