--- a/templates/parts/footer.html
+++ b/templates/parts/footer.html
@@ -1,11 +1,13 @@
-<div class='row'>
-  <div class='col-lg-12'>
-    <br />
-    <br />
-    <br />
-    <p class='text-center text-muted'>
-			<small>Minimail &ndash; Made with <span style='color:#ff5a79'>&hearts;</span> in Beijing &ndash; &copy; 2016</small>
-    </p>
-    <br />
-  </div>
+<div class='container'>
+	<div class='row'>
+		<div class='col-lg-12'>
+			<br />
+			<br />
+			<br />
+			<p class='text-center text-muted'>
+				<small>Minimail &ndash; Made with <span style='color:#ff5a79'>&hearts;</span> in Beijing &ndash; &copy; 2016</small>
+			</p>
+			<br />
+		</div>
+	</div>
 </div>
