Improve top menu UI.

--- a/templates/parts/main-navigation.html
+++ b/templates/parts/main-navigation.html
@@ -26,15 +26,15 @@
 		font-weight: 500;
 	}
 	.navbar-minimail li.active a {
-		color: #333;
-		text-decoration: underline;
+		color: #126EBF;
 	}
 	.navbar-minimail li a:focus {
 		background: #FFF;
+		color: #126EBF;
 	}
 	.navbar-minimail li a:hover {
 		color: #333;
-		text-decoration: underline;
+		color: #126EBF;
 		background: #FFF;
 	}
 </style>
