Re-add button to import subscribers.

--- a/subscriber_management/templates/import.html
+++ b/subscriber_management/templates/import.html
@@ -11,14 +11,14 @@
         </div>
         <div class="modal-body">
           <div class="form-group">
-            <small class='help-block'>See <a href='https://www.quora.com/Can-you-export-your-subscribers-from-MailChimp/answer/Lorenzo-Orlando-Caum' tabindex='-1' target='_blank'>here</a> for how to export your subscriber list from Mailchimp.</small>
+            <small class='help-block'>See <a href='https://www.quora.com/Can-you-export-your-subscribers-from-MailChimp/answer/Lorenzo-Orlando-Caum' tabindex='-1' target='_blank'>here</a> to see how to export your subscriber list from Mailchimp.</small>
             <label for="file_import" class="control-label">{% trans 'CSV file' %}:</label>
             <input id="file_import" name="csv_file" type="file" tabindex='1' />
           </div>
         </div>
         <div class="modal-footer">
           <a href='javascript:void(0)' type="button" tabindex=3 class="btn btn-default" data-dismiss="modal">{% trans 'Cancel' %}</a>
-          <button type="submit" class="btn btn-primary" tabindex=2>{% trans 'Import Subscribers' %}</button>
+          <button type="submit" class="btn btn-success" tabindex=2>{% trans 'Import Subscribers' %}</button>
         </div>
       </form>
     </div><!-- /.modal-content -->
@@ -43,7 +43,7 @@
         </div>
         <div class="modal-footer">
           <a href='javascript:void(0)' type="button" class="btn btn-default" tabindex='3' data-dismiss="modal">{% trans 'Cancel' %}</a>
-          <button tabindex='2' type="submit" class="btn btn-primary">{% trans 'Import Subscribers' %}</button>
+          <button tabindex='2' type="submit" class="btn btn-success">{% trans 'Import Subscribers' %}</button>
         </div>
       </form>
     </div><!-- /.modal-content -->
