--- a/templates/master.html
+++ b/templates/master.html
@@ -7,7 +7,7 @@
 
   <head>
     <meta charset="utf8">
-    <title>{% block title %}Lean Email Marketing Solution{% endblock %} &middot; Minimail</title>
+    <title>{% block title %}Lean Email Marketing for Big Lists{% endblock %} &middot; Minimail</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
     <link rel="canonical" href="http://minimail.fullweb.io">
