--- a/analytics_management/templates/list.html
+++ b/analytics_management/templates/list.html
@@ -1,39 +1,51 @@
-{% extends "master.html" %}
+{% extends 'master.html' %}
+{% load staticfiles %}
 {% load i18n %}
 {% load humanize %}
 
 
 {% block title %}
-  Analytics - {{list_object.name}}
+	{{list_object.name}} {% trans 'Analytics' %}
 {% endblock %}
 
 
 {% block content %}
 
+	<br />
+
   <div class='container'>
+
     <div class='row'>
-      <div class='col-lg-6 col-sm-6'>
+      <div class='col-lg-10 col-lg-offset-1 col-sm-12'>
         <h3>
-          {% trans "Analytics" %} - {{list_object.name}}
+					<a href="{% url 'analytics-management-home' %}">
+          {% trans "All Lists Analytics" %}
+					</a>
+					&rsaquo;&nbsp;
+					{{ list_object.name }}
+
         </h3>
       </div>
     </div>
 
-    <hr />
+    <br />
 
-    {% for item in  object_list %}
-      <div class="list-group">
-        <a href="{% url 'analytics-management-campaign' list_object.uuid item.uuid %}" class="list-group-item">
-          <h4 class='list-group-item-heading'>
-            {{ item.email_subject }}
-          </h4>
-        </a>
-      </div>
-    {% empty %}
-      <div class='alert alert-warning'>
-        No data yet.
-      </div>
-    {% endfor %}
+    <div class='row'>
+      <div class='col-lg-10 col-lg-offset-1 col-sm-12'>
+			{% for item in  object_list %}
+				<div class="list-group">
+					<a href="{% url 'analytics-management-campaign' list_object.uuid item.uuid %}" class="list-group-item">
+						<h4 class='list-group-item-heading'>
+							{{ item.email_subject }}
+						</h4>
+					</a>
+				</div>
+			{% empty %}
+				<div class='alert alert-warning'>
+					No data yet.
+				</div>
+			{% endfor %}
+		</div>
   </div>
 {% endblock %}
 
