Improve top menu navigation UI.

--- a/templates/parts/main-navigation.html
+++ b/templates/parts/main-navigation.html
@@ -2,14 +2,14 @@
 
 <style>
   header {
-		border-bottom: 2px solid #f5f5f5;
-		border-top: 2px solid #03A9F4;
-		background: #FFF;
+		border-bottom: 2px solid #F5F5F5;
+		border-top: 2px solid #333;
+		background: #FAFAFA;
 	}
 	.navbar-minimail {
 		margin-top: 0;
 		margin-bottom: 0;
-		background: #FFF;
+		background: #FAFAFA;
 		border-bottom: 0px solid #EAEAEA;
 		border-radius: 0;
 	}
@@ -29,13 +29,18 @@
 		color: #126EBF;
 	}
 	.navbar-minimail li a:focus {
-		background: #FFF;
+		background: #FAFAFA;
 		color: #126EBF;
 	}
 	.navbar-minimail li a:hover {
 		color: #333;
 		color: #126EBF;
-		background: #FFF;
+		background: #FAFAFA;
+	}
+	.nav .open > a,
+	.nav .open > a:hover,
+	.nav .open > a:focus {
+		background: #FAFAFA;
 	}
 </style>
 
