Add new field to check if the user as a list.

--- a/templates/master.html
+++ b/templates/master.html
@@ -38,6 +38,7 @@
 			}
 			footer {
 				background: #FAFAFA;
+				border-top:	2px solid #F5F5F5;
 				margin-top: 7rem;
 			}
 			.btn, .btn-group-sm > .btn {
