--- a/templates/parts/footer.html
+++ b/templates/parts/footer.html
@@ -5,7 +5,7 @@
 			<br />
 			<br />
 			<p class='text-center text-muted'>
-				<small>Minimail &ndash; Made with <span style='color:#ff5a79'>&hearts;</span> in Beijing &ndash; &copy; 2016</small>
+				<small>Minimail &nbsp; &middot; &nbsp; Made with <span style='color:#ff5a79'>&hearts;</span> in Beijing &nbsp; &middot; &nbsp; &copy; 2017</small>
 			</p>
 			<br />
 		</div>
