--- a/templates/parts/main-navigation.html
+++ b/templates/parts/main-navigation.html
@@ -55,7 +55,7 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     {% if user.is_authenticated %}
-			{% if user.has_verified_email %}
+			{% if user.has_a_list %}
 				<a href="/campaigns/new" class="btn btn-default btn-sm navbar-btn pull-left" style='margin-right: .5rem;'>
 					{% trans "Compose email" %}
 				</a>
