--- a/analytics_management/templates/campaign.html
+++ b/analytics_management/templates/campaign.html
@@ -27,9 +27,9 @@
     <p>
         <span class="lead">{{ses_delivery_object.total_count|default:0}}</span>
         delivered ->
-        <span class="lead">{{ses_bounce_object.hard_count|default:0}}</span> hard bounce,
-        <span class="lead">{{ses_bounce_object.soft_count|default:0}}</span> soft bounce,
-        <span class="lead">{{campaign.unsubscribe_count|default:0}}</span> unsubscribes
+        {{ses_bounce_object.hard_count|default:0}} hard bounce,
+        {{ses_bounce_object.soft_count|default:0}} soft bounce,
+        {{campaign.unsubscribe_count|default:0}} unsubscribes
     </p>
     <p>
         <span class="lead">{{open_rate_object.unique_count|default:0}}</span> Unique opens ({{open_rate_object.total_count|default:0}} total opens)
@@ -44,6 +44,8 @@
             <div class="col-lg-6 col-lg-offset-1">{{top_link|decodeURI}} <span class="pull-right">({{top_link.unique_count|default:0}} unique clicks, {{top_link.total_count|default:0}} total clicks)</span></div>
         {% endfor %}
     </div>
+    {% else %}
+        <p>No links have been clicked now</p>
     {% endif %}
   </div>
 {% endblock %}
