--- a/analytics_management/templates/campaign.html
+++ b/analytics_management/templates/campaign.html
@@ -14,40 +14,44 @@
 
   <div class='container'>
     <div class='row'>
-      <div class='col-lg-6 col-sm-6'>
-        <h3>
-          {% trans "Analytics" %} - {{campaign.email_list.name}} - {{campaign.email_subject}}
-        </h3>
-      </div>
+        <div class='col-lg-10 col-lg-offset-1 col-sm-12'>
+            <div class='row'>
+              <div class='col-lg-6 col-sm-6'>
+                 <br />
+                <h3>
+                  {% trans "Analytics" %} - {{campaign.email_list.name}} - {{campaign.email_subject}}
+                </h3>
+              </div>
+            </div>
+            <hr />
+            <p>
+                <span class="lead">{{campaign.recipient_count|default:0}}</span> sent {%if ses_bounce_object %}in {{ses_bounce_object.first|timeuntil:ses_bounce_object.last}}{% endif %}
+            </p>
+            <p>
+                <span class="lead">{{ses_delivery_object.total_count|default:0}}</span>
+                delivered ->
+                {{ses_bounce_object.hard_count|default:0}} hard bounce,
+                {{ses_bounce_object.soft_count|default:0}} soft bounce,
+                {{campaign.unsubscribe_count|default:0}} unsubscribes
+            </p>
+            <p>
+                <span class="lead">{{open_rate_object.unique_count|default:0}}</span> Unique opens ({{open_rate_object.total_count|default:0}} total opens)
+            </p>
+            <p>
+                <span class="lead">{{click_stats_campain.unique_count|default:0}}</span> Unique clicks ({{click_stats_campain.total_count|default:0}} total clicks)
+            </p>
+            {% if click_stats_campain.unique_count > 0 %}
+            <div class="row">
+                <div class="col-lg-6 col-lg-offset-1">Top 10 most clicked links <span class="pull-right">({{click_stats_top.unique_count|default:0}} unique clicks, {{click_stats_top.total_count|default:0}} total clicks)</span></div>
+                {% for top_link in top_links %}
+                    <div class="col-lg-6 col-lg-offset-1">{{top_link|decodeURI}} <span class="pull-right">({{top_link.unique_count|default:0}} unique clicks, {{top_link.total_count|default:0}} total clicks)</span></div>
+                {% endfor %}
+            </div>
+            {% else %}
+                <p>No links have been clicked now</p>
+            {% endif %}
+        </div>
     </div>
-    <hr />
-    <p>
-        <span class="lead">{{campaign.recipient_count|default:0}}</span> sent in {{time_delta}} minutes.
-    </p>
-    <p>
-        <span class="lead">{{ses_delivery_object.total_count|default:0}}</span>
-        delivered ->
-        {{ses_bounce_object.hard_count|default:0}} hard bounce,
-        {{ses_bounce_object.soft_count|default:0}} soft bounce,
-        {{campaign.unsubscribe_count|default:0}} unsubscribes
-    </p>
-    <p>
-        <span class="lead">{{open_rate_object.unique_count|default:0}}</span> Unique opens ({{open_rate_object.total_count|default:0}} total opens)
-    </p>
-    <p>
-        <span class="lead">{{click_stats_campain.unique_count|default:0}}</span> Unique clicks ({{click_stats_campain.total_count|default:0}} total clicks)
-    </p>
-    {% if click_stats_campain.unique_count > 0 %}
-    <div class="row">
-        <div class="col-lg-6 col-lg-offset-1">Top 10 most clicked links <span class="pull-right">({{click_stats_top.unique_count|default:0}} unique clicks, {{click_stats_top.total_count|default:0}} total clicks)</span></div>
-        {% for top_link in top_links %}
-            <div class="col-lg-6 col-lg-offset-1">{{top_link|decodeURI}} <span class="pull-right">({{top_link.unique_count|default:0}} unique clicks, {{top_link.total_count|default:0}} total clicks)</span></div>
-        {% endfor %}
-    </div>
-    {% else %}
-        <p>No links have been clicked now</p>
-    {% endif %}
-  </div>
 {% endblock %}
 
 
