Make textares auto-resizable.

--- a/templates/index.html
+++ b/templates/index.html
@@ -80,6 +80,7 @@
 							<textarea id="{{create_list_form.description.name.auto_id}}"
 										 name="{{create_list_form.description.name}}"
 										 required
+										data-autoresize
 										 rows='2'
 										 placeholder="In 2-3 sentences, what is your newsletter about?"
 										 class='form-control'
