Remove mailchimp blue.

--- a/templates/index.html
+++ b/templates/index.html
@@ -118,7 +118,7 @@
 							<input type='hidden' name='success_url' value='/' />
 							<div class="form-group">
 								<label for="file_import" class="control-label">{% trans 'Select your MailChimp CSV file' %}:</label>
-								<input id="file_import" name="csv_file" type="file" tabindex='1' style='background: #52bad5; cursor: pointer; width: 100%; padding: 2rem 2rem; border-radius: 3px; color: #fff; font-weight: 500;'/>
+								<input id="file_import" name="csv_file" type="file" tabindex='1' style='cursor: pointer; width: 100%; padding: 2rem 2rem; border-radius: 3px; font-weight: 500;'/>
 								<small class='help-block'>See <a href='https://www.quora.com/Can-you-export-your-subscribers-from-MailChimp/answer/Lorenzo-Orlando-Caum' tabindex='-1' target='_blank'>here</a> to see how to export your subscriber list from Mailchimp.</small>
 							</div>
 							<br />
