Fix uri template.

--- a/analytics_management/templates/campaign.html
+++ b/analytics_management/templates/campaign.html
@@ -44,7 +44,7 @@
             <div class="row">
                 <div class="col-lg-6 col-lg-offset-1">Top 10 most clicked links <span class="pull-right">({{click_stats_top.unique_count|default:0}} unique clicks, {{click_stats_top.total_count|default:0}} total clicks)</span></div>
                 {% for top_link in top_links %}
-                    <div class="col-lg-6 col-lg-offset-1">{{top_link|decodeURI}} <span class="pull-right">({{top_link.unique_count|default:0}} unique clicks, {{top_link.total_count|default:0}} total clicks)</span></div>
+                    <div class="col-lg-6 col-lg-offset-1">{{top_link.uri|decodeURI}} <span class="pull-right">({{top_link.unique_count|default:0}} unique clicks, {{top_link.total_count|default:0}} total clicks)</span></div>
                 {% endfor %}
             </div>
             {% else %}
